test_files/netlist_validation/invalid/invalid_04.net
Y1 N001 0 1k
V1 N001 0 12
.op
.backanno
.end
